--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,6 @@
         @apply bg-gray-50 scroll-smooth
     }
 } */
+.dropdown {
+    @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
+}
