--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,5 @@
 }
 
 .height {
-    @apply h-auto pt-[80px] pb-[70px] md:min-h-[100vh] md:pt-[90px] md:pb-[90px] lg:pb-[50px] lg:h-full xl:pt-[100px]
+    @apply min-h-[100vh] pt-[80px] pb-[70px] md:pt-[90px] md:pb-[90px] lg:pb-[50px] xl:pt-[100px]
 }
